modules/wycs/tests/valid/test_set_07.wyal
assert:
  forall ({int} xs, {int} ys):
       (xs ⊆ ys && ys ⊆ xs) ==> xs == ys
