modules/wycs/tests/invalid/test_051.wyal
assert:
  forall({int} xs):
    |xs| == 1 ==> xs == {}
